Fix white space issue

--- a/app/assets/stylesheets/components/_album_show.scss
+++ b/app/assets/stylesheets/components/_album_show.scss
@@ -62,3 +62,10 @@
 .album-detail-information .fa-random {
     margin-right: 30px;
 }
+
+.album-index-item-info {
+    width: 200px;
+    white-space: nowrap; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
